--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="detail-box">
                   <div>
                     <h3>
-                      Сприовски
+                      Спировски
                     </h3>
                     <h2>
                       Мартин
@@ -125,7 +125,7 @@
                     </p>
                     <div class="">
                       <a href="">
-                        Contact Us
+                        Контактирај ме
                       </a>
                     </div>
                   </div>
@@ -152,7 +152,7 @@
                     </p>
                     <div class="">
                       <a href="">
-                        Contact Us
+                        Контактирај ме
                       </a>
                     </div>
                   </div>
