--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,11 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="keywords" content="SM-Training" />
+  <meta name="description" content="Personalen trener" />
+  <meta name="author" content="Angjel Angelov" />
 
-  <title>Neogym</title>
+  <title>SM-Training</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -36,7 +36,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Neogym
+              SM-Training
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,17 +47,17 @@
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item ">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Почетна <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
-                  <a class="nav-link" href="why.html"> Why us </a>
+                  <a class="nav-link" href="why.html"> За мене </a>
                 </li>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="trainer.html"> trainers</a>
+                  <a class="nav-link" href="trainer.html"> Галерија</a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="contact.html"> Contact Us</a>
+                  <a class="nav-link" href="contact.html"> Контактирај ме</a>
                 </li>
               </ul>
               <div class="user_option">
@@ -89,25 +89,25 @@
           <div class="form_container pr-0 pr-lg-5 mr-0 mr-lg-2">
             <div class="heading_container">
               <h2>
-                Contact Us
+                Контактирајте ме
               </h2>
             </div>
             <form action="">
               <div>
-                <input type="text" placeholder="Name" />
+                <input type="text" placeholder="Име и презиме" />
               </div>
               <div>
-                <input type="email" placeholder="Email" />
+                <input type="email" placeholder="Е-маил" />
               </div>
               <div>
-                <input type="text" placeholder="Phone Number" />
+                <input type="text" placeholder="Телефонски број" />
               </div>
               <div>
-                <input type="text" class="message-box" placeholder="Message" />
+                <input type="text" class="message-box" placeholder="Порака" />
               </div>
               <div class="d-flex ">
                 <button>
-                  Send
+                  Испрати
                 </button>
               </div>
             </form>
@@ -130,7 +130,7 @@
             </div>
             <div class="detail-box">
               <p>
-                Location
+                Sky Wellness Cevahir
               </p>
             </div>
           </div>
@@ -142,7 +142,7 @@
             </div>
             <div class="detail-box">
               <p>
-                +02 1234567890
+                +389 75 961 111
               </p>
             </div>
           </div>
@@ -168,8 +168,8 @@
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <p>
-      &copy; 2020 All Rights Reserved. Design by
-      <a href="https://html.design/">Free Html Templates</a>
+      &copy; 2025 All Rights Reserved. Design by
+      <a href="https://www.instagram.com/angel___angelov/">Анѓел Ангелов</a>
     </p>
   </footer>
   <!-- footer section -->
