--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                     </h1>
                     <p>
                       Мојата цел е да им помогнам на луѓето да ја постигнат својата најдобра физичка форма и здравје преку: 
-                      -персонализирани тренинзи според вашите можности и цели
-                        -здрава и балансирана исхрана прилагодена на вашите можности и темпо на живот
-                      -постојано советување и водење низ процесот 
+                      персонализирани тренинзи според вашите можности и цели, 
+                        здрава и балансирана исхрана прилагодена на вашите можности и темпо на живот, 
+                      постојано советување и водење низ процесот.
                     Верувам дека спортот и здравиот начин на живот се клучни за успех на сите полиња во животот и за постигнување на целокупна физичка и психичка благосостојба.
                     </p>
                     <div class="">
@@ -250,7 +250,7 @@
                   Лиценциран тренер
                 </h5>
                 <p>
-                  Лиценциран фитнес и бодибилдинг инструктор.
+                  ББФФМ лиценциран фитнес и бодибилдинг тренер.
                 </p>
               </div>
             </div>
@@ -320,7 +320,7 @@
               За мене
             </h2>
             <p>
-              Јас сум Мартин Спировски, со повеќе од една деценија искуство во спортот и фитнесот. Тренирав фудбал 13 години, од кои 2 години професионално, што ми помогна да ја развијам дисциплината, посветеноста и тимскиот дух.
+              Јас сум Мартин Спировски, со повеќе од една деценија искуство во спортот и фитнесот. Тренирав фудбал 13 години, од кои 2 години професионално. Што ми помогна да ја развијам дисциплината, посветеноста и тимскиот дух.
 
 Моментално сум студент на Факултетот за физичка култура, спорт и здравје - 4та година. Покрај академските обврски, веќе четири години активно тренирам во теретана, а последната година работам како сертифициран фитнес тренер.
 
@@ -444,7 +444,7 @@
             </div>
             <div class="detail-box">
               <p>
-                Локација
+                Sky Wellness Cevahir
               </p>
             </div>
           </div>
@@ -456,7 +456,7 @@
             </div>
             <div class="detail-box">
               <p>
-                +02 1234567890
+                +389 75 961 111
               </p>
             </div>
           </div>
@@ -483,7 +483,7 @@
   <footer class="container-fluid footer_section">
     <p>
       &copy; 2025 All Rights Reserved. Design by
-      Анѓел Ангелов
+      <a href="https://www.instagram.com/angel___angelov/">Анѓел Ангелов</a>
     </p>
   </footer>
   <!-- footer section -->
