--- a/why.html
+++ b/why.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Neogym</title>
+  <title>SM-Training</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -36,7 +36,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Neogym
+              SM-Training
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,17 +47,17 @@
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item ">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Почетна <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="why.html"> Why us </a>
+                  <a class="nav-link" href="why.html"> За мене </a>
                 </li>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="trainer.html"> trainers</a>
+                  <a class="nav-link" href="trainer.html"> Галерија</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html"> Contact Us</a>
+                  <a class="nav-link" href="contact.html"> Контактирај ме</a>
                 </li>
               </ul>
               <div class="user_option">
@@ -80,7 +80,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Why Choose Us
+          За мене
         </h2>
       </div>
 
@@ -93,10 +93,10 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  QUALITY EQUIPMENT
+                  Лиценциран тренер
                 </h5>
                 <p>
-                  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                  Лиценциран фитнес и бодибилдинг инструктор.
                 </p>
               </div>
             </div>
@@ -108,10 +108,10 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  NUTRITION
+                  Нутриција
                 </h5>
                 <p>
-                  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                  Бесплатни совети за исхрана и суплементи.
                 </p>
               </div>
             </div>
@@ -123,10 +123,10 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  HEALTHY DIET PLAN
+                  Здрава исхрана
                 </h5>
                 <p>
-                  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                  Здрави рецепти и совети за здрава исхрана.
                 </p>
               </div>
             </div>
@@ -138,10 +138,10 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  SPORT TRAINING
+                  Бесплатен пробен тренинг
                 </h5>
                 <p>
-                  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                  Закажете го вашиот бесплатен пробен тренинг.
                 </p>
               </div>
             </div>
@@ -165,7 +165,7 @@
             </div>
             <div class="detail-box">
               <p>
-                Location
+                Локација
               </p>
             </div>
           </div>
@@ -177,7 +177,7 @@
             </div>
             <div class="detail-box">
               <p>
-                +02 1234567890
+                +389 75 961 111
               </p>
             </div>
           </div>
@@ -203,8 +203,8 @@
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <p>
-      &copy; 2020 All Rights Reserved. Design by
-      <a href="https://html.design/">Free Html Templates</a>
+      &copy; 2025 All Rights Reserved. Design by
+      <a href="https://www.instagram.com/angel___angelov/">Анѓел Ангелов</a>
     </p>
   </footer>
   <!-- footer section -->
